--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
     "@sentry/node": "^6.18.1",
     "@types/fs-extra": "^11.0.4",
     "@whiskeysockets/baileys": "6.4.0",
+    "axios": "^1.13.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "bull": "^4.8.2",
